Bug 856562 - Fix decode race in gstreamer backend r=alessandro.d